# wc2026-predictor

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml  sources.md
.github/workflows/: ci.yml
data/raw/: confederations.json  wc2026_bracket_map.json  wc2026_fixtures.csv  wc2026_groups.json
desktop/: index.html  main.js  package-lock.json  package.json  renderer.js  styles.css
docs/: DESIGN.md  FINDINGS.md
src/wc2026/: __init__.py  cli.py  config.py  serve.py
src/wc2026/data/: __init__.py  ingest.py  loaders.py  schema.py
src/wc2026/evaluate/: __init__.py  metrics.py
src/wc2026/features/: __init__.py  build.py  elo.py
src/wc2026/models/: __init__.py  base.py  baseline.py  classifier.py  poisson.py
src/wc2026/tournament/: __init__.py  groups.py  simulate.py
tests/: test_data_schema.py  test_elo.py  test_features_no_leakage.py  test_metrics.py  test_model_smoke.py  test_simulate.py  test_tournament_rules.py
